tests/typing/bad/testfile-duplicate-2.go
package main

func foo() int { x,x := 1,2; return x }
func main() {}
